--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,119 @@
-<p>navbar works!</p>
+<nav id="navDiv"
+      class="px-4 py-1 flex justify-between items-center h-15 fixed z-10 w-full shadow-sm top-0 transition-all bg-gray-50">
+      <!-- Logo Section -->
+      <a routerLink="/home" class="flex items-center">
+            <img src="logo.png" alt="Logo" class="w-14 h-14">
+      </a>
+
+      <!-- Hamburger Menu Button -->
+      <div class="flex md:hidden">
+            <button id="closeMenu" (click)="toggleMenu()"
+                  class="text-gray-600 hover:text-gray-800 focus:outline-none transition-colors z-50">
+                  @if (!isMenuOpen()) {
+
+                  <fa-icon [icon]="menuIcon" class="text-2xl"></fa-icon>
+                  }@else {
+
+                  <fa-icon [icon]="xMarkIcon" class="text-2xl"></fa-icon>
+                  }
+
+            </button>
+      </div>
+
+      <!-- Navigation Links for Desktop -->
+      <ul class="hidden md:flex space-x-6">
+            <li>
+                  <a routerLink="/films"
+                        class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-gray-200 hover:text-gray-900 transition-colors">
+                        Films
+                  </a>
+            </li>
+            <li>
+                  <a routerLink="/actors"
+                        class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-gray-200 hover:text-gray-900 transition-colors">
+                        Actors
+                  </a>
+            </li>
+            <li>
+                  <a routerLink="/ratings"
+                        class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-gray-200 hover:text-gray-900 transition-colors">
+                        Ratings
+                  </a>
+            </li>
+            <li>
+                  <a routerLink="/directors"
+                        class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-gray-200 hover:text-gray-900 transition-colors">
+                        Directors
+                  </a>
+            </li>
+
+            <li>
+                  <a routerLink="/signup"
+                        class="flex text-md font-semibold bg-blue-400 text-blue-900 px-4 py-2 rounded-md hover:bg-blue-300 transition-colors w-full">
+                        signup
+                  </a>
+            </li>
+            <!-- <li>
+                  <button (click)="logout()"
+                        class="flex text-md font-semibold bg-blue-400 text-blue-900 px-4 py-2 rounded-md hover:bg-blue-300 transition-colors w-full">
+                        logout
+                  </button>
+            </li> -->
+      </ul>
+
+      <!-- Side Menu -->
+      <div id="outside" class="fixed inset-0 z-40 md:hidden transform transition-all"
+            (click)="toggleMenuOutsideClick($event)"
+            [ngClass]="{ 'translate-x-full bg-opacity-100': !isMenuOpen(), 'translate-x-0 bg-gray-900 bg-opacity-75': isMenuOpen() }">
+            <div id="menuDiv" (click)="$event.stopPropagation()"
+                  [ngClass]="{ 'w-60': isMenuOpen(), 'w-0': !isMenuOpen() }"
+                  class="side-menu w-64 flex flex-col bg-gray-800 absolute top-0 right-0 h-full shadow-sm overflow-hidden transition-all pt-20">
+                  <div class="flex-1">
+                        <ul class="flex flex-col space-y-4 px-4 py-4 h-full">
+                              <li>
+                                    <a routerLink="/films"
+                                          class="flex text-md px-4 py-2 rounded font-semibold text-gray-300 hover:bg-gray-700 hover:text-white transition-colors w-full">
+                                          Films
+                                    </a>
+                              </li>
+                              <li>
+                                    <a routerLink="/actors"
+                                          class="flex text-md px-4 py-2 rounded font-semibold text-gray-300 hover:bg-gray-700 hover:text-white transition-colors w-full">
+                                          Actors
+                                    </a>
+                              </li>
+                              <li>
+                                    <a routerLink="/ratings"
+                                          class="flex text-md px-4 py-2 rounded font-semibold text-gray-300 hover:bg-gray-700 hover:text-white transition-colors w-full">
+                                          Ratings
+                                    </a>
+                              </li>
+                              <li>
+                                    <a routerLink="/directors"
+                                          class="flex text-md px-4 py-2 rounded font-semibold text-gray-300 hover:bg-gray-700 hover:text-white transition-colors w-full">
+                                          Directors
+                                    </a>
+                              </li>
+                              <li>
+                                    <a routerLink="/login"
+                                          class="flex text-md px-4 py-2 rounded font-semibold text-gray-300 hover:bg-gray-700 hover:text-white transition-colors w-full">
+                                          login
+                                    </a>
+                              </li>
+                              <li>
+                                    <a routerLink="/signup"
+                                          class="flex text-md font-semibold bg-blue-400 text-blue-900 px-4 py-2 rounded-md hover:bg-blue-300 transition-colors w-full">
+                                          signup
+                                    </a>
+                              </li>
+                              <li>
+                                    <button (click)="logout()"
+                                          class="flex text-md font-semibold bg-blue-400 text-blue-900 px-4 py-2 rounded-md hover:bg-blue-300 transition-colors w-full">
+                                          logout
+                                    </button>
+                              </li>
+                        </ul>
+                  </div>
+            </div>
+      </div>
+</nav>
