--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,78 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fade-in {
+  animation: fadeIn 0.5s forwards;
+}
+
+.fade-out {
+  animation: fadeOut 0.5s forwards;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+}
+
+.parent-fade-in {
+  animation: parentFadeIn 0.2s forwards;
+}
+
+.parent-fade-out {
+  animation: parentFadeOut 0.2s forwards;
+}
+
+@keyframes parentFadeIn {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+  }
+  to {
+    background-color: rgba(0, 0, 0, 0.675);
+  }
+}
+
+@keyframes parentFadeOut {
+  from {
+    background-color: rgba(0, 0, 0, 0.675);
+  }
+  to {
+    background-color: rgba(0, 0, 0, 0);
+  }
+}
+
+.animate-form {
+  animation: slide 0.5s forwards;
+  animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-50%);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  75% {
+    transform: translateX(-2.5%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
