--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,17 +1,17 @@
-<div class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-r from-slate-200 to-gray-100">
+<div class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-r from-gray-200 to-gray-100">
       <img src="/logo.png" alt="Logo" class="w-24 h-24 mb-4 animate-form" />
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()"
             class="bg-white px-6 pb-6 pt-4 rounded-lg shadow-lg w-full max-w-sm animate-form">
-            <h2 class="text-xl font-bold text-center text-gray-700 mb-4">
+            <h2 class="text-xl font-bold text-center text-gray-800 mb-4">
                   Login to Your Account
             </h2>
             <div class="mb-5">
-                  <label class="block text-gray-700 text-xs font-bold mb-1" for="username">Username</label>
+                  <label class="block text-gray-800 text-xs font-bold mb-1" for="username">Username</label>
                   <div class="relative">
                         <fa-icon [icon]="userIcon"
-                              class="absolute top-1/2 transform -translate-y-1/2 left-2 text-gray-400"></fa-icon>
+                              class="absolute top-1/2 transform -translate-y-1/2 left-2 text-gray-500"></fa-icon>
                         <input type="text" id="username" formControlName="username"
-                              class="w-full pl-8 pr-2 py-1.5 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-200 focus:border-maya-blue-dark"
+                              class="w-full pl-8 pr-2 py-1.5 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
                               placeholder="Enter your username" />
                   </div>
                   <div class="text-red-500 text-xs h-2">
@@ -24,12 +24,12 @@
                   </div>
             </div>
             <div class="mb-5">
-                  <label class="block text-gray-700 text-xs font-bold mb-1" for="password">Password</label>
+                  <label class="block text-gray-800 text-xs font-bold mb-1" for="password">Password</label>
                   <div class="relative">
                         <fa-icon [icon]="pswIcon"
-                              class="absolute top-1/2 transform -translate-y-1/2 left-2 text-gray-400"></fa-icon>
+                              class="absolute top-1/2 transform -translate-y-1/2 left-2 text-gray-500"></fa-icon>
                         <input type="password" id="password" formControlName="password"
-                              class="w-full pl-8 pr-2 py-1.5 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-200 focus:border-maya-blue-dark"
+                              class="w-full pl-8 pr-2 py-1.5 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
                               placeholder="Enter your password" />
                   </div>
                   <div class="text-red-500 text-xs h-2">
@@ -42,13 +42,13 @@
                   </div>
             </div>
             <button type="submit"
-                  class="w-full bg-celeste-dark text-night font-bold py-3 px-3 rounded-lg hover:bg-celeste-light hover:scale-105 transition-transform focus:outline-none focus:ring-2 focus:ring-blue-200"
+                  class="w-full bg-blue-800 text-white font-bold py-3 px-3 rounded-lg hover:bg-blue-900 hover:scale-105 transition-transform focus:outline-none focus:ring-2 focus:ring-blue-500"
                   [disabled]="loginForm.invalid">
                   Login
             </button>
             <div class="mt-4 text-center">
-                  <span class="text-gray-600 text-xs">Don't have an account?
-                        <a routerLink="/signup" class="text-mayborder-maya-blue-dark hover:underline">Sign up</a></span>
+                  <span class="text-gray-700 text-md">Don't have an account?
+                        <a routerLink="/signup" class="text-blue-600 hover:underline">Sign up</a></span>
             </div>
       </form>
 </div>
