--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div
-      class="flex flex-col lg:flex-row items-center justify-center gap-4 lg:gap-10 min-h-screen bg-gradient-to-r from-slate-200 to-gray-100 overflow-auto p-4">
+      class="h-full flex flex-col lg:flex-row items-center justify-center gap-4 lg:gap-10 min-h-screen bg-gradient-to-r from-slate-200 to-gray-100 overflow-auto p-4">
 
       <img src="/logo.png" alt="Logo" class="h-24 lg:h-40 mb-4 animate-form" />
 
@@ -221,12 +221,12 @@
 
 
             <button type="submit"
-                  class="w-4/5 mx-auto block bg-celeste-dark text-night font-bold mt-3 py-3 px-3 rounded-lg hover:bg-celeste-light hover:scale-105 transition-transform focus:outline-none focus:ring-2 focus:ring-celeste-light"
+                  class="w-4/5 mx-auto block bg-blue-900 text-white font-bold mt-3 py-3 px-3 rounded-lg hover:bg-blue-800 hover:scale-105 transition-transform focus:outline-none focus:ring-2 focus:ring-blue-300t"
                   [disabled]="signupForm.invalid">
                   Sign Up
             </button>
             <div class="mt-4 text-center">
-                  <span class="text-gray-600 text-xs">Already have an account?
+                  <span class="text-gray-600 text-md">Already have an account?
                         <a routerLink="/login" class="text-blue-500 hover:underline">Login</a></span>
             </div>
       </form>
