--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<footer class="bg-gray-200 h-24 flex items-center justify-center border-t">
+      <p class="text-gray-600 text-sm">Copyright 2024 - All rights reserved</p>
+</footer>
