--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="home-container">
+    <header class="home-header">
+      <h1>FilmSpot</h1>
+      <p>Your ultimate movie guide</p>
+    </header>
+  
+    <section class="home-content">
+      <p>Discover the latest films, reviews, and more!</p>
+      <button routerLink="/films" class="explore-button">Explore Films</button>
+    </section>
+  </div>
+  
