--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 @let isAuthPage = router.url === '/login' || router.url === '/signup';
+<app-loader />
 <div class="flex flex-col min-h-screen justify-between">
 
 
