improved home page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,6 +24,12 @@
       <!-- Navigation Links for Desktop -->
       <ul class="hidden md:flex space-x-6">
             <li>
+                  <a routerLink="/home"
+                        class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-gray-200 hover:text-gray-900 transition-colors">
+                        Home
+                  </a>
+            </li>
+            <li>
                   <a routerLink="/films"
                         class="flex text-md px-4 py-2 rounded font-semibold text-gray-600 hover:bg-gray-200 hover:text-gray-900 transition-colors">
                         Films
@@ -76,6 +82,12 @@
                   <div class="flex-1 flex flex-col justify-between h-full">
                         <!-- Pages' Links -->
                         <ul class="flex flex-col space-y-4 px-4 py-4 h-full">
+                              <li>
+                                    <a routerLink="/home"
+                                          class="flex text-md px-4 py-2 rounded font-semibold text-gray-300 hover:bg-gray-700 hover:text-white transition-colors w-full">
+                                          home
+                                    </a>
+                              </li>
                               <li>
                                     <a routerLink="/films"
                                           class="flex text-md px-4 py-2 rounded font-semibold text-gray-300 hover:bg-gray-700 hover:text-white transition-colors w-full">
