--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -118,18 +118,24 @@
                         <!-- Auth Links -->
                         <ul class="flex flex-col justify-end space-y-4 px-4 py-4 h-full">
 
+                              @if (!(authService.user$ | async)) {
                               <li>
                                     <a routerLink="/signup"
                                           class="flex text-md font-semibold bg-blue-400 text-blue-900 px-4 py-2 rounded-md hover:bg-blue-300 transition-colors w-full">
                                           signup
                                     </a>
                               </li>
+
+                              }@else {
                               <li>
                                     <button (click)="logout()"
                                           class="flex text-md font-semibold bg-blue-400 text-blue-900 px-4 py-2 rounded-md hover:bg-blue-300 transition-colors w-full">
                                           logout
                                     </button>
                               </li>
+
+                              }
+
                         </ul>
                   </div>
             </div>
