--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="text-center p-5">
+  <!-- Header -->
   <header
     class="relative bg-gradient-to-br from-blue-100 to-violet-100 p-10 rounded-lg mb-10 text-blue-500 min-h-[calc(100vh-6rem)] flex flex-col justify-center items-center">
     <h1 class="text-6xl m-0 font-bold">FilmSpot</h1>
@@ -11,14 +12,15 @@
       </button>
 
     </div>
-    <button class="font-bold text-xl absolute bottom-4 right-4 flex justify-center gap-1"
+    <button class="scroll-btn font-semibold text-lg absolute bottom-4 right-4 flex justify-center gap-3"
       (click)="scrollToUpcomingScreenings()">
-      <fa-icon [icon]="downArrowIcon"></fa-icon>
-      See Upcoming Screenings
+      <fa-icon [icon]="downArrowIcon" class="text-2xl"></fa-icon>
+      see upcoming screenings
     </button>
 
   </header>
 
+  <!-- Upcoming Screenings Section  -->
   <section id="upcomingScreenings" #upcomingScreenings class="min-h-screen pt-8 flex flex-col justify-center">
 
     <h1 class="text-4xl text-gray-800 font-bold my-6">Upcoming Screenings</h1>
@@ -29,6 +31,22 @@
 
       <p-carousel [value]="screeningsList" [numVisible]="3" [numScroll]="1" [circular]="false"
         [styleClass]="'carousel-container mx-auto px-4'" [responsiveOptions]="responsiveOptions">
+
+        <!-- Custom Previous Button -->
+        <ng-template pTemplate="previousicon">
+          <button
+            class="w-8 h-8 flex justify-center items-center rounded-full bg-slate-200 text-slate-600 shadow-md hover:bg-slate-300 transition">
+            <fa-icon [icon]="previousIcon"></fa-icon> <!-- Left arrow -->
+          </button>
+        </ng-template>
+
+        <!-- Custom Next Button -->
+        <ng-template pTemplate="nexticon">
+          <button
+            class="w-8 h-8 flex justify-center items-center rounded-full bg-slate-200 text-slate-600 shadow-md hover:bg-slate-300 transition">
+            <fa-icon [icon]="nextIcon"></fa-icon> <!-- Right arrow -->
+          </button>
+        </ng-template>
         <ng-template let-screening pTemplate="item">
           <div class="border mb-3 border-gray-200 rounded-lg shadow-lg bg-slate-100 max-w-sm mx-3">
             <div class="mb-4">
