removed unused code + improved film details

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.p-dialog-mask {
+  background-color: #00000059 !important;
+}
+
 .fade-in {
   animation: fadeIn 0.5s forwards;
 }
