--- a/src/app/pages/film/films/films.component.html
+++ b/src/app/pages/film/films/films.component.html
@@ -17,6 +17,21 @@
       </select>
 </div>
 
+<!-- Display placeholder while films are loading, otherwise show films -->
+@if (isFilmsLoading|async) {
+<div class="grid grid-cols-[repeat(auto-fill,minmax(200px,1fr))] gap-5 mt-6 p-5">
+      @for (item of [].constructor(5); track $index) {
+      <div class="film-card bg-gray-200 rounded-lg shadow-md overflow-hidden animate-pulse">
+            <div class="film-image w-full h-60 bg-gray-300"></div>
+            <div class="film-details p-4">
+                  <div class="h-6 bg-gray-300 rounded mb-2"></div>
+                  <div class="h-4 bg-gray-300 rounded mb-2"></div>
+                  <div class="h-3 bg-gray-300 rounded"></div>
+            </div>
+      </div>
+      }
+</div>
+}
 <!-- Films List -->
 <div class="grid grid-cols-[repeat(auto-fill,minmax(200px,1fr))] gap-5 mt-6 p-5">
       @let filmResponse = (films$ | async)?._embedded?.films;
@@ -39,6 +54,8 @@
       </div>
       }
 </div>
+
+
 
 <!-- Pagination Controls -->
 <div class="pagination flex justify-center items-center gap-4 my-6">
