--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -65,7 +65,7 @@
               {{ screening.film.title }}
             </h3>
             <!-- Start and End Times -->
-            <div class="mb-2 text-sm text-gray-600 text-center mb-5">
+            <div class="text-sm text-gray-600 text-center mb-5">
               <strong>Start:</strong> {{ screening.startTime | date: 'short' }}
             </div>
 
