--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="text-center p-5">
   <!-- Header -->
   <header
-    class="relative bg-gradient-to-br from-blue-100 to-violet-100 p-10 rounded-lg mb-10 text-blue-500 min-h-[calc(100vh-6rem)] flex flex-col justify-center items-center">
+    class="relative bg-transparent mb-10 text-blue-500 min-h-[calc(100vh-6rem)] flex flex-col justify-center items-center">
     <h1 class="text-6xl m-0 font-bold">FilmSpot</h1>
     <p class="text-xl mt-2">Your ultimate movie guide</p>
     <p class="text-2xl mb-5 text-blue-900 font-bold mt-4">Discover the latest films, reviews, and more!</p>
@@ -21,7 +21,7 @@
   </header>
 
   <!-- Upcoming Screenings Section  -->
-  <section id="upcomingScreenings" #upcomingScreenings class="min-h-screen pt-8 flex flex-col justify-center">
+  <section id="upcomingScreenings" #upcomingScreenings class="min-h-screen pt-8">
 
     <h1 class="text-4xl text-gray-800 font-bold my-6">Upcoming Screenings</h1>
 
@@ -29,49 +29,7 @@
     <div class="max-w-4xl mx-auto my-6">
       @if (screeningsList) {
 
-      <p-carousel [value]="screeningsList" [numVisible]="3" [numScroll]="1" [circular]="false"
-        [styleClass]="'carousel-container mx-auto px-4'" [responsiveOptions]="responsiveOptions">
-
-        <!-- Custom Previous Button -->
-        <ng-template pTemplate="previousicon">
-          <button
-            class="w-8 h-8 flex justify-center items-center rounded-full bg-slate-200 text-slate-600 shadow-md hover:bg-slate-300 transition">
-            <fa-icon [icon]="previousIcon"></fa-icon> <!-- Left arrow -->
-          </button>
-        </ng-template>
-
-        <!-- Custom Next Button -->
-        <ng-template pTemplate="nexticon">
-          <button
-            class="w-8 h-8 flex justify-center items-center rounded-full bg-slate-200 text-slate-600 shadow-md hover:bg-slate-300 transition">
-            <fa-icon [icon]="nextIcon"></fa-icon> <!-- Right arrow -->
-          </button>
-        </ng-template>
-        <ng-template let-screening pTemplate="item">
-          <div class="border mb-3 border-gray-200 rounded-lg shadow-lg bg-slate-100 max-w-sm mx-3">
-            <div class="mb-4">
-              <div class="relative">
-                <!-- Film Image -->
-                <img [src]="serverUrl + screening.film.imageUrl" [alt]="screening.film.title"
-                  class="w-full h-auto max-h-72 object-contain rounded-t-lg image" />
-                <!-- Hall Number -->
-                <div class="absolute top-2 left-2 px-2 py-1 bg-blue-500 text-white text-xs rounded">
-                  Hall: {{ screening.hall.number }}
-                </div>
-              </div>
-            </div>
-            <!-- Film Title -->
-            <h3 class="mb-4 text-xl font-semibold text-gray-800 text-center">
-              {{ screening.film.title }}
-            </h3>
-            <!-- Start and End Times -->
-            <div class="text-sm text-gray-600 text-center mb-5">
-              <strong>Start:</strong> {{ screening.startTime | date: 'short' }}
-            </div>
-
-          </div>
-        </ng-template>
-      </p-carousel>
+      <app-upcoming-carousel [screeningsList]="screeningsList" />
 
       }
     </div>
