--- a/src/app/pages/film/films/films.component.html
+++ b/src/app/pages/film/films/films.component.html
@@ -1,4 +1,4 @@
-<div class="film-search-container flex gap-4 p-6 bg-gray-100 rounded-md shadow-md">
+<div class="film-search-container flex gap-4 p-6 bg-white/55 backdrop-blur shadow-md">
       <!-- Search Bar -->
       <input type="text" placeholder="Search films by title"
             class="search-bar px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400"
@@ -22,12 +22,12 @@
 @if (isFilmsLoading|async) {
 <div class="grid grid-cols-[repeat(auto-fill,minmax(200px,1fr))] gap-5 mt-6 p-5">
       @for (item of [].constructor(5); track $index) {
-      <div class="film-card bg-gray-200 rounded-lg shadow-md overflow-hidden animate-pulse">
-            <div class="film-image w-full h-60 bg-gray-300"></div>
+      <div class="film-card bg-white/55 rounded-lg shadow-md overflow-hidden animate-pulse">
+            <div class="film-image w-full h-60 bg-white/70 backdrop-blur"></div>
             <div class="film-details p-4">
-                  <div class="h-6 bg-gray-300 rounded mb-2"></div>
-                  <div class="h-4 bg-gray-300 rounded mb-2"></div>
-                  <div class="h-3 bg-gray-300 rounded"></div>
+                  <div class="h-6 bg-white/80 rounded mb-2"></div>
+                  <div class="h-4 bg-white/80 rounded mb-2"></div>
+                  <div class="h-3 bg-white/80 rounded"></div>
             </div>
       </div>
       }
