--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,9 @@
+:host {
+  display: block;
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+}
 button.scroll-btn {
   padding: 0.5rem 1rem;
   border: none;
